tests/snapshots/backends_kotlin_jni_emitter_test__snapshot_jni_byte_array_return_client.snap
---
source: tests/backends_kotlin_jni_emitter_test.rs
assertion_line: 755
expression: client_content
---
// Generated by alef. Do not edit by hand.
@file:Suppress(
    "ktlint:standard:max-line-length",
    "ktlint:standard:trailing-comma-on-declaration-site",
    "ktlint:standard:trailing-comma-on-call-site",
    "ktlint:standard:annotation",
    "MaxLineLength",
    "TooManyFunctions",
    "LongParameterList",
    "LongMethod",
)

package dev.sample_crate

import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.withContext

@Suppress("TooManyFunctions")
class DefaultClient internal constructor(handle: Long) : AutoCloseable {
    private val handleLock = Any()
    private var nativeHandle: Long = handle

    private inline fun <T> withHandle(block: (Long) -> T): T = synchronized(handleLock) {
        check(nativeHandle != 0L) { "DefaultClient is closed" }
        block(nativeHandle)
    }
    companion object {
        private val MAPPER = com.fasterxml.jackson.databind.ObjectMapper()
            .registerModule(com.fasterxml.jackson.datatype.jdk8.Jdk8Module())
            .findAndRegisterModules()
            .setPropertyNamingStrategy(com.fasterxml.jackson.databind.PropertyNamingStrategies.SNAKE_CASE)
    }

    suspend fun speech(request: SpeechRequest): ByteArray {
        return withContext(Dispatchers.IO) { withHandle { handle -> DemoBridge.nativeDefaultClientSpeech(handle, MAPPER.writeValueAsString(request)) } }
    }

    override fun close() = synchronized(handleLock) {
        if (nativeHandle != 0L) {
            val handle = nativeHandle
            nativeHandle = 0L
            DemoBridge.nativeFreeDefaultClient(handle)
        }
    }
}
