tests/snapshots/backends_kotlin_jni_emitter_test__snapshot_jni_default_client_chat_complete.snap
---
source: tests/backends_kotlin_jni_emitter_test.rs
assertion_line: 647
expression: content
---
// Generated by alef. Do not edit by hand.
@file:Suppress(
    "ktlint:standard:max-line-length",
    "ktlint:standard:trailing-comma-on-declaration-site",
    "ktlint:standard:trailing-comma-on-call-site",
    "ktlint:standard:annotation",
    "MaxLineLength",
    "TooManyFunctions",
    "LongParameterList",
    "LongMethod",
)

package dev.sample_crate

import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.withContext

@Suppress("TooManyFunctions")
class DefaultClient internal constructor(handle: Long) : AutoCloseable {
    private val handleLock = Any()
    private var nativeHandle: Long = handle

    private inline fun <T> withHandle(block: (Long) -> T): T = synchronized(handleLock) {
        check(nativeHandle != 0L) { "DefaultClient is closed" }
        block(nativeHandle)
    }
    companion object {
        private val MAPPER = com.fasterxml.jackson.databind.ObjectMapper()
            .registerModule(com.fasterxml.jackson.datatype.jdk8.Jdk8Module())
            .findAndRegisterModules()
            .setPropertyNamingStrategy(com.fasterxml.jackson.databind.PropertyNamingStrategies.SNAKE_CASE)
    }

    suspend fun chat(request: ChatCompletionRequest): ChatCompletionResponse {
        return withContext(Dispatchers.IO) {
            val responseJson = withHandle { handle -> DemoBridge.nativeDefaultClientChat(handle, MAPPER.writeValueAsString(request)) }
            MAPPER.readValue(responseJson, ChatCompletionResponse::class.java)
        }
    }

    suspend fun embeddings(request: EmbeddingsRequest): EmbeddingsResponse {
        return withContext(Dispatchers.IO) {
            val responseJson = withHandle { handle -> DemoBridge.nativeDefaultClientEmbeddings(handle, MAPPER.writeValueAsString(request)) }
            MAPPER.readValue(responseJson, EmbeddingsResponse::class.java)
        }
    }

    override fun close() = synchronized(handleLock) {
        if (nativeHandle != 0L) {
            val handle = nativeHandle
            nativeHandle = 0L
            DemoBridge.nativeFreeDefaultClient(handle)
        }
    }
}
